--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # https://git-scm.com/docs/gitignore
 # https://help.github.com/articles/ignoring-files
 # Example .gitignore files: https://github.com/github/gitignore
-/bower_components/
-/node_modules/
+
+node_modules/
+src/i_themes/default/_grids (copie).scss
+tests/checkbox.html
+bower_components/jeet
