--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "es6-promise": "^3.0.2",
     "gulp": "~3.9.0",
     "gulp-autoprefixer": "~3.1.0",
     "gulp-cssnano": "~2.1.0",
     "gulp-ignore": "^2.0.1",
-    "gulp-minify-css": "^1.2.3",
     "gulp-rename": "~1.2.2",
     "gulp-ruby-sass": "~2.0.6",
     "gulp-sourcemaps": "~1.6.0",
