change folders architecture
for better source files structure
new theming philosophy !

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ next_README.md
 /src/sass/animate/
 /src/sass/hover/
 /src/sass/_i_animation.scss
+/src/sass/features/animations/
+/src/sass/features/_animations.scss
